# ntts

./: .gitignore  README.md  s.
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: .gitignore  CMakeLists copy.txt  CMakeLists.txt  main.cpp  ntts copy.cpp  ntts.cpp  piper.cpp  piper.hpp  readme.md
native_lib/Linux-x86_64/onnxruntime/onnxruntime-linux-x64-1.14.1/: README.md
native_lib/Linux-x86_64/piper_phonemize/include/: phoneme_ids.hpp  phonemize.hpp  tashkeel.hpp
native_lib/Linux-x86_64/piper_phonemize/lib/: piper_phonemize
native_lib/lib/: .gitignore  readme.md
native_lib/lib/ntts/: CMakeLists.txt
native_lib/onnxruntime-Linux-x86_64/: .gitignore
package/: readme.md
package/ntts/: README.md  pubspec.yaml
package/ntts/test/: ntts_test.dart
package/ntts_dart/: README.md  pubspec.yaml
package/ntts_dart/example/: README.md  pubspec.yaml
package/ntts_dart/example/.github/workflows/: beta_compile.yaml
package/ntts_dart/example/ios/Runner/: Info.plist
package/ntts_dart/example/ios/packagex/: .gitignore
package/ntts_dart/example/lib/: example.dart  main.dart
package/ntts_dart/example/lib/core/: core.dart
package/ntts_dart/example/lib/flutter/: flutter.dart  image_flutter.dart
package/ntts_dart/example/lib/language/: language.dart  language_app.dart  language_code_type.dart
package/ntts_dart/example/lib/page/: chat.dart  home.dart  page.dart  setting.dart  sign.dart  sign_o_auth.dart
package/ntts_dart/example/lib/theme/: dark_mode_theme.dart  normal_mode_theme.dart  theme.dart
package/ntts_dart/example/lib/widget/: floating_bar_widget.dart  text_form.dart  widget.dart
package/ntts_dart/example/test/: widget_test.dart
package/ntts_dart/example/web/: index.html
package/ntts_dart/lib/: ntts_core.dart  ntts_dart.dart  ntts_request.dart  ntts_response.dart
package/ntts_dart/lib/api/: api.dart  create_voice.dart  get_version.dart
package/ntts_dart/lib/scheme/: error.dart  json_dart.dart  ok.dart  scheme.dart  voice.dart
package/ntts_dart/lib/typedef/: request.dart  typedef.dart
package/ntts_dart/linux/packagex/DEBIAN/: control  postinst  postrm
package/ntts_dart/macos/packagex/: .gitignore
package/ntts_dart/test/: ntts_dart_test.dart
package/ntts_flutter/: .metadata  ffigen.yaml  pubspec.yaml
package/ntts_flutter/android/: build.gradle  settings.gradle
package/ntts_flutter/android/src/main/: AndroidManifest.xml
package/ntts_flutter/example/: README.md  pubspec.yaml
package/ntts_flutter/example/android/app/: build.gradle
package/ntts_flutter/example/ios/Runner/: Info.plist
package/ntts_flutter/example/ios/Runner.xcodeproj/: project.pbxproj
package/ntts_flutter/example/lib/: main.dart
package/ntts_flutter/example/linux/: CMakeLists.txt  my_application.cc
package/ntts_flutter/example/windows/: CMakeLists.txt
package/ntts_flutter/ios/: ntts_flutter.podspec
package/ntts_flutter/ios/Classes/: ntts_flutter.c
package/ntts_flutter/lib/: ntts_flutter.dart  ntts_flutter_bindings_generated.dart
package/ntts_flutter/linux/: CMakeLists.txt
package/ntts_flutter/macos/: ntts_flutter.podspec
package/ntts_flutter/src/: CMakeLists.txt  ntts_flutter.c
package/ntts_flutter/windows/: CMakeLists.txt
package/ntts_train/: README.md  pubspec.yaml
package/ntts_train/lib/: ntts_train.dart
package/ntts_train/test/: ntts_train_test.dart
(+17 files in other folders)
